<resources>
    <!-- activity_movie_page.xmlge.xml -->
    <string name="app_name">MovieReview</string>
    <string name="cinema_title">씨네마 천국</string>
    <string name="limit_15">15</string>
    <string name="movie_title">군도</string>
    <string name="open_day">2014.07.23 개봉</string>
    <string name="genre_and_duration">액션 / 137 분</string>
    <string name="up_count">15</string>
    <string name="down_count">1</string>
    <string name="reservation_title">예매율</string>
    <string name="reservation_rank">5위</string>
    <string name="reservation_percentage">1.8%</string>
    <string name="rating_score_title">평점</string>
    <string name="rating_score">8.2</string>
    <string name="accumulate_people_title">누적 관객수</string>
    <string name="accumulate_people_count">839,399명</string>
    <string name="movie_summary">줄거리</string>
    <string name="movie_story">군도, 백성을 구하라! \n
    양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. \n
    힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다. \n
    \n
    쌍칼 도치 vs 백성의 적 조윤\n
    잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이,\n
    나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈,\n
    삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는
    죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다.\n
    \n
    뭉치면 백성, 흩어지면 도적!\n
    망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적,
    조윤과 한 판 승부를 시작하는데...\n</string>
    <string name="director_and_starring">감독/출연</string>
    <string name="director">감독</string>
    <string name="director_name">윤종빈</string>
    <string name="starring">출연</string>
    <string name="starring_name">하정우(도치), 강동원(조윤)</string>
    <string name="comment_title">한줄평</string>
    <string name="comment_write">작성하기</string>
    <string name="comment_see_all">모두 보기</string>
    <string name="movie_reservation">예매하기</string>

    <string name="comment_user_id_tmp">kkw5**</string>
    <string name="comment_time_tmp">10분전</string>
    <string name="comment_tmp">적당히 재미있다. 오랜만에 잘 본 영화같습니다.</string>
    <string name="comment_recommendation">추천</string>
    <string name="comment_recommendation_count">1</string>
    <string name="comment_police">신고하기</string>

    <!-- write_comment_view.xml -->
    <string name="please_write_comment">평점을 입력해 주세요</string>
    <string name="please_write_under_100_words">100자 이내로 작성해주세요.</string>
    <string name="save">저 장</string>
    <string name="cancel">취 소</string>

    <!-- full_screen_comment_list.xml -->
    <string name="title_comment_list">한줄평 목록</string>
    <string name="participant_number">(1,142명 참여)</string>

    <!-- Viewpager fragment -->
    <string name="over_age_12">12세 관람가</string>
    <string name="over_age_15">15세 관람가</string>
    <string name="over_age_18">18세 관람가</string>
    <string name="d_day_1">D-1</string>
    <string name="d_day_10">D-10</string>
    <string name="d_day_100">D-100</string>
    <string name="movie_title_1">1. 군 도</string>
    <string name="movie_title_2">2. 공 조</string>
    <string name="movie_title_3">3. 더 킹</string>
    <string name="title_activity_navigation_drawer">영화 목록</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Crocus</string>
    <string name="nav_header_subtitle">https://www.crocus.co.kr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">영화 목록</string>
    <string name="menu_api">영화 API</string>
    <string name="menu_reservation">예매하기</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
