<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_api"
            android:icon="@drawable/ic_review"
            android:title="@string/menu_api" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_reservation" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
