<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Movie information wrapper -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/movie_title"
            android:textColor="#737373"
            android:textSize="25dp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_15"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#EEEEEE"/>

    <RatingBar
        android:id="@+id/comment_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="0"
        android:stepSize="9.9"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_write_comment"
        android:gravity="center"
        android:textSize="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Comment editor wrapper -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:gravity="top"
                android:hint="@string/please_write_under_100_words"
                android:background="@drawable/border_radius"
                android:layout_margin="20dp"
                android:padding="15dp"
                android:textSize="20dp"
                android:maxLength="100"/>
        </LinearLayout>
    </ScrollView>

    <!-- Button wrapper -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_all_purple"
            android:text="@string/save"
            android:textSize="20dp"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_all_purple"
            android:text="@string/cancel"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</LinearLayout>