<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/comment_user_profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user1"
            app:civ_border_color="#C8C8C8"
            android:layout_marginLeft="15dp"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="15dp">
            <TextView
                android:id="@+id/comment_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_user_id_tmp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="12dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/comment_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/comment_time_tmp"
                    android:textSize="12dp"/>
                <RatingBar
                    android:id="@+id/comment_rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="9.9" />
            </LinearLayout>
            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/comment_tmp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_recommendation"
                    android:textSize="12dp"/>

                <TextView
                    android:id="@+id/comment_recommendation_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/comment_recommendation_count"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_police"
                    android:textSize="12dp"
                    android:textColor="#888888"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#F1F1F1"/>
</LinearLayout>