<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <!-- ScrollView wrapper -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Title bar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="#3F51B5"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/ib_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_comment_list"
                    android:textSize="20dp"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="25dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#EEEEEE" />

            <!-- Movie name and rating -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/movie_title"
                        android:textColor="#717171"
                        android:textSize="30dp"
                        android:textStyle="bold" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_15"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#EEEEEE" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right|center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <RatingBar
                        android:id="@+id/rb_full_screen_comment_list_rating_bar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="4.1"
                        android:stepSize="9.9" />
                    <TextView
                        android:id="@+id/rb_full_screen_comment_list_rating_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/rating_score"
                        android:textSize="15dp"
                        android:textColor="#717171" />
                    <TextView
                        android:id="@+id/rb_full_screen_comment_list_rating_participant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/participant_number"
                        android:textSize="15dp"
                        android:textColor="#717171"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#EEEEEE" />

            <!-- Comment list view -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_title"
                    android:textColor="#000000"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_review_selected" />

                    <Button
                        android:id="@+id/btn_write_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="#00000000"
                        android:text="@string/comment_write"
                        android:textColor="#E44418"
                        android:textSize="25dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nsv_comment_nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <ListView
                    android:id="@+id/lv_comment_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="true"></ListView>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>